packages/server/core/tests/base/fixtures/mock/type-error/config/mock/index.ts
export default {
  'GET /api/getInfo': 'foo',
};
